--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1>2048</h1>
-    <hr>
     <h2>Score: <span id="score">0</span></h2>
     <div id="board"></div>
+    <p>Use the <span class="bold">arrow keys</span> on your keyboard to play!</p>
 </body>
 </html>
